--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Great shop of various things"
+      content="All you need is 90s styled clothes"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ShopUp</title>
+    <title>90s shop</title>
   </head>
 
   <body>
